--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -130,7 +130,8 @@
     "applications": "Applications",
     "observations": "Observations",
     "services": "Services",
-    "search": "Search..."
+    "search": "Search...",
+    "logout":"Logout"
   },
   "events":
   {
