--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -130,7 +130,8 @@
     "applications": "Aplicaciones",
     "observations": "Observaciones",
     "services": "Servicios",
-    "search": "Buscar..."
+    "search": "Buscar...",
+    "logout":"Salir"
   },
   "events":
   {
