--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -130,7 +130,8 @@
     "applications": "Aplikazioak",
     "observations": "Oharrak",
     "services": "Zerbitzuak",
-    "search": "Bilatu..."
+    "search": "Bilatu...",
+    "logout":"Irten"
   },
   "events":
   {
