--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -48,7 +48,7 @@
     "manage": "Gestionar",
     "category": "Categoría",
     "event": "Evento",
-    "map":"Mapa",
+    "map": "Mapa",
     "application": "Aplicación",
     "applications": "Aplicaciones",
     "service": "Servicio",
@@ -59,63 +59,6 @@
     "administrator": "Administrador",
     "users": "Usuarios",
     "events": "Eventos"
-  },
-  "dashboard":
-  {
-    "acquisition_channels": "Acquisition Channels",
-    "users_by_country": "Users by Country",
-    "revenue": "Revenue",
-    "feed": "Feed",
-    "todo_list": "To Do List",
-    "calendar": "Calendar",
-    "new_visits": "New Visits",
-    "purchases": "Purchases",
-    "active_users": "Active Users",
-    "returned": "Returned",
-    "popular_app":
-    {
-      "super_app": "Super App",
-      "most_popular_app": "Most Popular App",
-      "total_visits": "Total Visits",
-      "new_visits": "New Visits",
-      "sales": "Sales"
-    },
-    "todo":
-    {
-      "task_todo": "Task to do.."
-    },
-    "traffic_chart":
-    {
-      "view_total": "Views Total"
-    }
-  },
-  "tree_view":
-  {
-    "title": "basic",
-    "programming": "Programming languages by programming paradigm",
-    "oop": "Object-oriented programming",
-    "java": "Java",
-    "c_plus_plus": "C++",
-    "c_sharp": "C#",
-    "prototype": "Prototype-based programming",
-    "java_script": "JavaScript",
-    "coffee_script": "CoffeeScript",
-    "lua": "Lua"
-  },
-  "chart":
-  {
-    "lines": "Lines",
-    "bars": "Bars",
-    "simple_line_chart": "Simple line chart",
-    "line_chart": "Line chart with area",
-    "bi_polar_line_chart": "Bi-polar line chart with area only",
-    "simple_bar_chart": "Simple bar chart",
-    "multi_line_labels_bar_chart": "Multi-line labels bar chart",
-    "stacked_bar_chart": "Stacked bar chart",
-    "pies_and_donuts": "Pies & Donuts",
-    "simple_pie": "Simple Pie",
-    "pie_with_labels": "Pie with labels",
-    "donut": "Donut"
   },
   "navbar":
   {
@@ -131,7 +74,7 @@
     "observations": "Observaciones",
     "services": "Servicios",
     "search": "Buscar...",
-    "logout":"Salir"
+    "logout": "Salir"
   },
   "events":
   {
@@ -179,7 +122,9 @@
     "new-password": "Nueva contraseña.",
     "new-password-success": "Por favor, introduzca una nueva contraseña.",
     "send": "Enviar",
-    "guard-error": "Debes iniciar sesión para ver esa página."
+    "guard-error": "Debes iniciar sesión para ver esa página.",
+    "permission":"Permiso",
+    "id":"Id"
   },
   "category-form":
   {
@@ -193,6 +138,8 @@
   {
     "created-by": "Creado por",
     "title": "Título",
+    "parent-id":"Padre Id",
+    "level":"Nivel",
     "category": "Categoría",
     "participants": "Participantes",
     "start": "Inicio",
@@ -262,11 +209,11 @@
   },
   "comment":
   {
-    "leaveComment": "Escribe un comentario.",
+    "leave-comment": "Escribe un comentario.",
     "delete": "Delete",
     "edit": "Edit",
     "reply": "Reply",
-    "hideReplies": "Hide Replies",
+    "hide-replies": "Hide Replies",
     "deleted": "Eliminado",
     "deleted-text": "El usuario ha eliminado el comentario."
   },
@@ -302,17 +249,6 @@
     "entityName-length": "Mínimo de caracteres: 5, Máximo de caracteres: 35.",
     "entityName-validation": "El nombre de la entidad no debe tener caracteres especiales."
   },
-  "map-icon":
-  {
-    "Dolmenes": "Dolmen",
-    "Menhires": "Menhir",
-    "Túmulos": "Tumulus",
-    "Cromleches": "Cromlech",
-    "Lisas": "Smooth",
-    "Escalonadas": "Stepped",
-    "Cuevas": "Cave",
-    "Templos": "Temple"
-  },
   "reaction":
   {
     "like": "Me gusta",
@@ -324,6 +260,25 @@
     "you": "Tú",
     "you-and": "Tú y ",
     "others": " personas más"
+  },
+  "modal":
+  {
+    "delete-user-header": "Eliminar usuario",
+    "delete-user-content": "¿Estas seguro de eliminar el usuario?",
+    "delete-category-header": "Eliminar categoría",
+    "delete-category-content": "¿Estas seguro de eliminar la categoría?",
+    "delete-event-header": "Eliminar evento",
+    "delete-event-content": "¿Estas seguro de eliminar el evento?",
+    "delete-service-header": "Eliminar servicio",
+    "delete-service-content": "¿Estas seguro de eliminar el servicio?",
+    "delete-service-type-header": "Eliminar typo de servicio",
+    "delete-service-type-content": "¿Estas seguro de eliminar el tipo de servicio?",
+    "delete-observation-header": "Eliminar observación",
+    "delete-observation-content": "¿Estas seguro de eliminar la observación?",
+    "delete-application-header": "Eliminar aplicación",
+    "delete-application-content": "¿Estas seguro de eliminar la aplicación?",
+    "acept":"Aceptar",
+    "cancel":"Cancelar"
   },
   "dates":
   {
