--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -266,17 +266,29 @@
     "delete-user-content": "Are you sure to delete the user?",
     "delete-category-header": "Delete category",
     "delete-category-content": "Are you sure to delete the category?",
+    "create-event-header": "Create event",
+    "edit-event-header": "Edit event",
     "delete-event-header": "Delete event",
     "delete-event-content": "Are you sure to delete the event?",
+    "create-service-header": "Create service",
+    "edit-service-header": "Edit service",
     "delete-service-header": "Delete service",
     "delete-service-content": "Are you sure to delete the service?",
     "delete-service-type-header": "Delete service type",
     "delete-service-type-content": "Are you sure to delete the service type?",
+    "create-observation-header": "Create observation",
+    "edit-observation-header": "Edit observation",
     "delete-observation-header": "Delete observation",
     "delete-observation-content": "Are you sure to delete the observation?",
+    "create-application-header": "Create application",
+    "edit-application-header": "Edit application",
     "delete-application-header": "Delete application",
     "delete-application-content": "Are you sure to delete the application?",
     "acept":"Acept",
-    "cancel":"Cancel"
+    "continue":"Continue",
+    "home":"Home",
+    "edit":"Edit",
+    "cancel":"Cancel",
+    "manage":"Manage"
   }
 }
