--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -268,18 +268,30 @@
     "delete-user-content": "Ziur zaude erabiltzailea ezabatzeaz?",
     "delete-category-header": "Kategoria ezabatu",
     "delete-category-content": "Ziur zaude kategoria ezabatzeaz?",
+    "create-event-header": "Ekintza sortu",
+    "edit-event-header": "Ekintza aldatu",
     "delete-event-header": "Ekintza ezabatu",
     "delete-event-content": "Ziur zaude ekintza ezabatzeaz?",
+    "create-service-header": "Zerbitzua sortu",
+    "edit-service-header": "Zerbitzua aldatu",
     "delete-service-header": "Zerbitzua ezabatu",
     "delete-service-content": "Ziur zaude zerbitzua ezabatzeaz?",
     "delete-service-type-header": "Zerbitzu mota ezabatu",
     "delete-service-type-content": "Ziur zaude zerbitzu mota ezabatzeaz?",
+    "create-observation-header": "Oharra sortu",
+    "edit-observation-header": "Oharra aldatu",
     "delete-observation-header": "Oharra ezabatu",
     "delete-observation-content": "Ziur zaude oharra ezabatzeaz?",
+    "create-application-header": "Aplicazioa sortu",
+    "edit-application-header": "Aplikazioa aldatu",
     "delete-application-header": "Aplikazioa ezabatu",
     "delete-application-content": "Ziur zaude aplikazioa ezabatzeaz?",
     "acept":"Onartu",
-    "cancel":"Ezeztatu"
+    "continue":"Jarraitu",
+    "home":"Hasiera",
+    "edit":"Aldatu",
+    "cancel":"Ezeztatu",
+    "manage":"Kudeatu"
   },
   "dates":
   {
