--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -69,6 +69,7 @@
     "en-short": "En",
     "eu-short": "Eu",
     "user": "User",
+    "contributors": "Contributors",
     "events": "Events",
     "applications": "Applications",
     "observations": "Observations",
@@ -176,7 +177,8 @@
     "title": "Title",
     "entity-name": "Entity name",
     "events": "Events",
-    "users": "Users",
+    "moderators": "Moderators",
+    "contributors": "Contributors",
     "license": "License",
     "conditions": "Conditions",
     "price": "Price",
