--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -69,6 +69,7 @@
     "en-short": "En",
     "eu-short": "Eu",
     "user": "Usuario",
+    "contributors": "Colaboradores",
     "events": "Eventos",
     "applications": "Aplicaciones",
     "observations": "Observaciones",
@@ -179,7 +180,8 @@
     "title": "Título",
     "entity-name": "Nombre de la entidad",
     "events": "Eventos",
-    "users": "Usuarios",
+    "moderators": "Moderadores",
+    "contributors": "Contribuyentes",
     "license": "Licencia",
     "conditions": "Condiciones",
     "price": "Precio",
