--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -69,6 +69,7 @@
     "en-short": "En",
     "eu-short": "Eu",
     "user": "Erabiltzailea",
+    "contributors": "Languntzaileak",
     "events": "Ekintzak",
     "applications": "Aplikazioak",
     "observations": "Oharrak",
@@ -178,7 +179,8 @@
     "title": "Titulua",
     "entity-name": "Entitate izena",
     "events": "Ekintzak",
-    "users": "Erabiltzaileak",
+    "moderators": "Moderatzaileak",
+    "contributors": "Languntzaileak",
     "license": "Lizentzia",
     "conditions": "Baldintzak",
     "price": "Prezioa",
