create event form

--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -161,8 +161,8 @@
     "delete-all": "Eliminar todos",
     "province": "Provincia",
     "municipality": "Municipio",
-    "lat": "Coordenadas N-S (Lat)",
-    "lng": "Coordenada E-O (Lng)",
+    "lat": "Latitud",
+    "lng": "Longitud",
     "check": "Comprobar",
     "locations-exists": "Localización existente",
     "location": "Localización",
