--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -160,8 +160,8 @@
     "delete-all": "Ezabatu denak",
     "province": "Probintzia",
     "municipality": "Udalerria",
-    "lat": "Koordenatuak I-H (Lat)",
-    "lng": "Koordenatuak E-M (Lng)",
+    "lat": "Latitudea",
+    "lng": "Longitudea",
     "check": "Egiaztatau",
     "locations-exists": "Existitzen diren kokapenak",
     "location": "Kokapena",
