configure to production

--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -110,11 +110,11 @@
     "repeat-password": "Repeat password",
     "about-yourself": "About yourself",
     "privacity-consent": "Privacity consent",
-    "sign-up-title": "Sign up to kultura.eus",
-    "sign-up-sign-in-link": "Already have an kultura.eus account? Sign in!",
+    "sign-up-title": "Sign up to kulturekintzak.eus",
+    "sign-up-sign-in-link": "Already have an kulturekintzak.eus account? Sign in!",
     "sign-up": "Sign up",
-    "sign-in-title": "Sign up to kultura.eus",
-    "sign-in-sign-up-link": "New to kultura.eus? Sign up!",
+    "sign-in-title": "Sign up to kulturekintzak.eus",
+    "sign-in-sign-up-link": "New to kulturekintzak.eus? Sign up!",
     "sign-in": "Sign in",
     "resend-link": "Resend activation link",
     "forgot-username": "¿Forgot username?",
