--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -111,11 +111,11 @@
     "repeat-password": "Errepikatu pasahitza",
     "about-yourself": "Zuri buruz",
     "privacity-consent": "Pribatutasun baimena",
-    "sign-up-title": "Eman izena kultura.eus-en",
-    "sign-up-sign-in-link": "Dagoeneko kultura.eus-en kontu bat duzu? Hasi saioa!",
+    "sign-up-title": "Eman izena kulturekintzak.eus-en",
+    "sign-up-sign-in-link": "Dagoeneko kulturekintzak.eus-en kontu bat duzu? Hasi saioa!",
     "sign-up": "Eman izena",
-    "sign-in-title": "Saioa hasi kultura.eus-en",
-    "sign-in-sign-up-link": "Berria zara kultura.eus-en? Eman izena!",
+    "sign-in-title": "Saioa hasi kulturekintzak.eus-en",
+    "sign-in-sign-up-link": "Berria zara kulturekintzak.eus-en? Eman izena!",
     "sign-in": "Saioa hasi",
     "resend-link": "Birbidali aktibatzeko esteka",
     "forgot-username": "Erabiltzaile izena ahaztu al duzu?",
