--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -110,11 +110,11 @@
     "repeat-password": "Repite la contraseña",
     "about-yourself": "Acerca de ti",
     "privacity-consent": "Consentimiento de privacidad",
-    "sign-up-title": "Regístrate en kultura.eus",
-    "sign-up-sign-in-link": "¿Ya tiene una cuenta de kultura.eus? ¡Inicia sesión!",
+    "sign-up-title": "Regístrate en kulturekintzak.eus",
+    "sign-up-sign-in-link": "¿Ya tiene una cuenta de kulturekintzak.eus? ¡Inicia sesión!",
     "sign-up": "Regístrate",
-    "sign-in-title": "Inicia sesión en kultura.eus",
-    "sign-in-sign-up-link": "¿Eres nuevo en kultura.eus? ¡Regístrate!",
+    "sign-in-title": "Inicia sesión en kulturekintzak.eus",
+    "sign-in-sign-up-link": "¿Eres nuevo en kulturekintzak.eus? ¡Regístrate!",
     "sign-in": "Iniciar sesión",
     "resend-link": "Reenviar enlace de activación",
     "forgot-username": "¿Olvidaste tu nombre de usuario?",
