Navbar, event edition, user profile.

--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -91,6 +91,7 @@
     "see-event": "Ver Evento",
     "see-map": "Ver Mapa",
     "edit-event": "Editar Evento",
+    "editing-event" : "Editando evento",
     "general-info": "Información General",
     "like": "Me gusta",
     "comment": "Comentar",
