--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -91,6 +91,7 @@
     "see-event": "Ekintza Ikusi",
     "see-map": "Mapa Ikusi",
     "edit-event": "Ekintza Aldatu",
+    "editing-event" : "Ekintza kudeatzen",
     "general-info": "Informazio Orokorra",
     "like": "Atsegin dut",
     "comment": "Iruzkina utzi",
