--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -134,6 +134,8 @@
     "id": "Id",
     "upload-image": "Irudia igo",
     "my-images": "Nire irudiak",
+    "new-image": "Igo irudi berri bat",
+    "profile-image": "Perfil irudia",
     "choose-image": "Aukeratu irudia"
   },
   "category-form":
