see-event / comments pipe / navbar style

--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -168,8 +168,9 @@
     "delete-all": "Delete all",
     "province": "Province",
     "municipality": "Municipality",
-    "lat": "Coordinates N-S (Lat)",
-    "lng": "Coordinates E-W (Lng)",
+    "lat": "Latitude",
+    "lng": "Longitude",
+    "coordinates": "Coordinates",
     "check": "Check",
     "locations-exists": "Location exists",
     "location": "Location",
