Navbar, searchbox,comments
Navbar icon change depending screen
searchbox position and event image animation
comments styling

--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -226,7 +226,9 @@
     "reply": "Reply",
     "hide-replies": "Hide Replies",
     "deleted": "Deleted",
-    "deleted-text": "The user has deleted the comment."
+    "deleted-text": "The user has deleted the comment.",
+    "hide-replies": "Hide replies...",
+    "see-replies": "See replies..."
   },
   "validation":
   {
