--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -228,6 +228,7 @@
     "delete": "Eliminar",
     "edit": "Editar",
     "reply": "Responder",
+    "save-changes": "Guardar cambios",
     "hide-replies": "Ocutar respuestas",
     "deleted": "Eliminado",
     "deleted-text": "El usuario ha eliminado el comentario.",
