--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -227,6 +227,7 @@
     "delete": "Ezabatu",
     "edit": "Aldatu",
     "reply": "Erantzun",
+    "save-changes": "Gorde aldaketak",
     "hide-replies": "Ezkutatu erantzunak",
     "deleted": "Ezabatuta",
     "deleted-text": "Erabiltzaileak iruzkina ezabatu du.",
