Authentication forms design, default profile img

--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -110,11 +110,11 @@
     "repeat-password": "Repeat password",
     "about-yourself": "About yourself",
     "privacity-consent": "Privacity consent",
-    "sign-up-title": "Sign up to kulturekintzak.eus",
-    "sign-up-sign-in-link": "Already have an kulturekintzak.eus account? Sign in!",
+    "sign-up-title": "Sign up",
+    "sign-up-sign-in-link": "Do you already have an account? Sign in!",
     "sign-up": "Sign up",
-    "sign-in-title": "Sign up to kulturekintzak.eus",
-    "sign-in-sign-up-link": "New to kulturekintzak.eus? Sign up!",
+    "sign-in-title": "Sign in",
+    "sign-in-sign-up-link": "New in kulturekintzak.eus? Sign up!",
     "sign-in": "Sign in",
     "resend-link": "Resend activation link",
     "forgot-username": "¿Forgot username?",
@@ -125,7 +125,8 @@
     "reset-password-title": "Recoverd password",
     "new-password": "New password.",
     "new-password-success": "Pealse, enter a new password.",
-    "privacy-policy": "I accept the <a href='javascript:void(0)'>privacy policy</a>",
+    "accept": "I accept the",
+    "privacy-policy": "privacy policy",
     "send": "Send",
     "guard-error": "You must be logged in to view that page.",
     "permission": "Permission",
