--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -111,11 +111,11 @@
     "repeat-password": "Repite la contraseña",
     "about-yourself": "Acerca de ti",
     "privacity-consent": "Consentimiento de privacidad",
-    "sign-up-title": "Regístrate en kulturekintzak.eus",
-    "sign-up-sign-in-link": "¿Ya tiene una cuenta de kulturekintzak.eus? ¡Inicia sesión!",
+    "sign-up-title": "Regístrate",
+    "sign-up-sign-in-link": "¿Ya tienes tu cuenta? ¡Inicia sesión!",
     "sign-up": "Regístrate",
-    "sign-in-title": "Inicia sesión en kulturekintzak.eus",
-    "sign-in-sign-up-link": "¿Eres nuevo en kulturekintzak.eus? ¡Regístrate!",
+    "sign-in-title": "Inicia sesión",
+    "sign-in-sign-up-link": "¿Sin cuenta en kulturekintzak.eus? ¡Regístrate!",
     "sign-in": "Iniciar sesión",
     "resend-link": "Reenviar enlace de activación",
     "forgot-username": "¿Olvidaste tu nombre de usuario?",
@@ -126,7 +126,8 @@
     "reset-password-title": "Recuperar la contraseña",
     "new-password": "Nueva contraseña.",
     "new-password-success": "Por favor, introduzca una nueva contraseña.",
-    "privacy-policy": "Acepto la <a href='javascript:void(0)'>política de privacidad</a>",
+    "accept": "Acepto la",
+    "privacy-policy": "política de privacidad",
     "send": "Enviar",
     "guard-error": "Debes iniciar sesión para ver esa página.",
     "permission": "Permiso",
