--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -112,10 +112,10 @@
     "repeat-password": "Errepikatu pasahitza",
     "about-yourself": "Zuri buruz",
     "privacity-consent": "Pribatutasun baimena",
-    "sign-up-title": "Eman izena kulturekintzak.eus-en",
-    "sign-up-sign-in-link": "Dagoeneko kulturekintzak.eus-en kontu bat duzu? Hasi saioa!",
+    "sign-up-title": "Eman izena",
+    "sign-up-sign-in-link": "Dagoeneko baduzu kontua? Hasi saioa!",
     "sign-up": "Eman izena",
-    "sign-in-title": "Saioa hasi kulturekintzak.eus-en",
+    "sign-in-title": "Saioa hasi",
     "sign-in-sign-up-link": "Berria zara kulturekintzak.eus-en? Eman izena!",
     "sign-in": "Saioa hasi",
     "resend-link": "Birbidali aktibatzeko esteka",
@@ -127,7 +127,8 @@
     "reset-password-title": "Pasahitza berreskuratu",
     "new-password": "Pasahitz berria.",
     "new-password-success": "Mesedez, sar ezazu pasahitz berria.",
-    "privacy-policy": "Onartzen dut <a href='javascript:void(0)'>pribatutasun politika</a>",
+    "accept": "Onartzen dut",
+    "privacy-policy": "pribatutasun politika",
     "send": "Bidali",
     "guard-error": "Saioa hasi behar duzu orrialde hau ikusteko.",
     "permission": "Baimena",
